modified:   src/thread/Mutex.h 	modified:   src/thread/Thread.h 	modified:   src/thread/Tid.cpp 	modified:   src/thread/Tid.h 	modified:   test/testcase/testThreadSmoke.cpp

--- a/nacos-cpp-cli.properties
+++ b/nacos-cpp-cli.properties
@@ -19,8 +19,8 @@
 #nacos.auth.password=
 
 #specify this if you are using an endpoint
-#endpoint=
-#endpointPort=
+endpoint=127.0.0.1
+endpointPort=80
 
 #advanced settings
 #port for udp listener (to receive service change information for subscribed services)
