--- a/nacos-cpp-cli.properties
+++ b/nacos-cpp-cli.properties
@@ -19,8 +19,8 @@
 #nacos.auth.password=
 
 #specify this if you are using an endpoint
-endpoint=127.0.0.1
-endpointPort=80
+#endpoint=
+#endpointPort=
 
 #advanced settings
 #port for udp listener (to receive service change information for subscribed services)
