--- a/nacos-cpp-cli.properties
+++ b/nacos-cpp-cli.properties
@@ -22,6 +22,9 @@
 #endpoint=
 #endpointPort=
 
+#specify context path for nacos server ("nacos" by default)
+#nacos.server.contextpath
+
 #advanced settings
 #port for udp listener (to receive service change information for subscribed services)
 #nacos.udp.port=
