fix crash and code polish
don't clear map when call Deinit of IMACProvider to prevent crash
add accesskey/secretkey config

--- a/nacos-cpp-cli.properties
+++ b/nacos-cpp-cli.properties
@@ -32,3 +32,6 @@
 #poller interval (10000 ms by default) to refresh subscribed service information from server
 #naming.poller.interval=
 
+#accessKey/secretKey for SPAS
+#accessKey=
+#secretKey=
