log size and #96 , thanks to @cool-colo

--- a/nacos-cpp-cli.properties
+++ b/nacos-cpp-cli.properties
@@ -4,8 +4,8 @@
 #log path, default is ~/nacos/logs/
 #nacos.log.path=
 
-#rotate time (now we only support hour as unit)
-#nacos.log.rotateTime=24h
+#rotate size (number [+ unit], unit can be k/K m/M g/G. the size is regarded as byte if there is no unit)
+#nacos.log.rotateSize=100m
 
 #log level, default is ERROR
 #nacos.log.level=ERROR
