ff=unix to remove \r

--- a/nacos-cpp-cli.properties
+++ b/nacos-cpp-cli.properties
@@ -1,3 +1,4 @@
+#!!please NOTE that the file format for this properties should be UNIX!!
 #specify nacos server address here(separated by ,)
 #serverAddr=
 
