--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ find_package(Threads REQUIRED)
 find_package(CURL REQUIRED)
 
 install(TARGETS nacos-cli
-		LIBRARY)
+		LIBRARY DESTINATION lib)
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/
 		DESTINATION include/nacossdkcpp
