--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,10 +49,11 @@ add_executable(nacos-cli.out ${TEST_SRCS_DIRS} ${SRCS_DIRS})
 add_library(nacos-cli SHARED ${SRCS_DIRS})
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
-target_link_libraries(nacos-cli PRIVATE Threads::Threads curl)
-target_link_libraries(nacos-cli.out PRIVATE Threads::Threads curl)
+target_link_libraries(nacos-cli PRIVATE Threads::Threads curl z)
+target_link_libraries(nacos-cli.out PRIVATE Threads::Threads curl z)
 find_package(Threads REQUIRED)
 find_package(CURL REQUIRED)
+find_package(ZLIB REQUIRED)
 
 install(TARGETS nacos-cli
 		LIBRARY DESTINATION lib)
