project directory structure optimization
move .h files that are not used by users to the project's src directory
polish readme.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,5 +61,5 @@ install(TARGETS nacos-cli
 		LIBRARY DESTINATION lib)
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/
-		DESTINATION include/nacossdkcpp
+		DESTINATION include/nacos
 		FILES_MATCHING PATTERN "*.h*")
